--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src="site_libs/header-attrs-2.24/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -33,6 +33,7 @@
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
+<script src="site_libs/navigation-1.1/codefolding.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-6.4.2/css/all.min.css" rel="stylesheet" />
@@ -221,6 +222,9 @@ $(document).ready(function () {
 </style>
 
 <!-- code folding -->
+<style type="text/css">
+.code-folding-btn { margin-bottom: 4px; }
+</style>
 
 
 
@@ -345,6 +349,14 @@ div.tocify {
 
 <div id="header">
 
+<div class="btn-group pull-right float-right">
+<button type="button" class="btn btn-default btn-xs btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
+<ul class="dropdown-menu dropdown-menu-right" style="min-width: 50px;">
+<li><a id="rmd-show-all-code" href="#">Show All Code</a></li>
+<li><a id="rmd-hide-all-code" href="#">Hide All Code</a></li>
+</ul>
+</div>
+
 
 
 <h1 class="title toc-ignore">Making websites</h1>
@@ -355,8 +367,7 @@ div.tocify {
 <div id="this-is-shinas-awesome-website" class="section level1">
 <h1>This is Shina’s awesome website</h1>
 <p>What if I add some text here…?</p>
-<p><img
-src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
+<p><img src="images/IMG_0496.JPG" /></p>
 <div id="heres-a-subsection" class="section level2">
 <h2>Here’s a subsection</h2>
 <p>And here’s some additional text …</p>
@@ -376,9 +387,24 @@ src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
 <h2>Local image</h2>
 <p>Fall pugs <img src="images/pugs.jpeg" /></p>
 </div>
-<div id="link-to-pae-within-the-site" class="section level2">
-<h2>Link to pae within the site</h2>
+<div id="link-to-page-within-the-site" class="section level2">
+<h2>Link to page within the site</h2>
 <p><a href="about.html">About me</a></p>
+</div>
+<div id="quarterly-results" class="section level2 tabset">
+<h2 class="tabset">Quarterly Results</h2>
+<div id="by-product" class="section level3">
+<h3>By Product</h3>
+<p>This is my first tab and I can do stuff</p>
+</div>
+<div id="by-region" class="section level3">
+<h3>By Region</h3>
+<p>This is my second tab and it does other stuff</p>
+</div>
+</div>
+<div id="this-is-a-new-section" class="section level2">
+<h2>This is a new section</h2>
+<p>and it’s really great</p>
 </div>
 </div>
 
@@ -417,6 +443,11 @@ $(document).ready(function () {
 </script>
 
 <!-- code folding -->
+<script>
+$(document).ready(function () {
+  window.initializeCodeFolding("hide" === "show");
+});
+</script>
 
 <script>
 $(document).ready(function ()  {
