Editing my website

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="http://github.com/bst-p8105/">
+  <a href="http://github.com/shinamin0218/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -372,8 +372,8 @@ div.tocify {
 <h2>Here’s a subsection</h2>
 <p>And here’s some additional text …</p>
 <pre class="r"><code>rnorm(10)</code></pre>
-<pre><code>##  [1]  1.7559143  1.8554243  0.7013224 -0.9451482  1.6422529  0.3251954
-##  [7]  0.5015440  0.2639741  1.5021559 -1.9367257</code></pre>
+<pre><code>##  [1]  2.24269709 -1.27774335 -0.04113872  0.31411735  0.23470843  1.14033851
+##  [7] -0.41037722 -1.15938180  0.33613913  2.08997168</code></pre>
 </div>
 <div id="links-to-other-websites" class="section level2">
 <h2>Links to other websites</h2>
