--- a/about.html
+++ b/about.html
@@ -365,7 +365,7 @@ as a research assistant. This experience has fueled my desire to pursue
 a Master’s degree in Epidemiology, with a particular focus on the study
 of aging and chronic diseases.</p></li>
 </ul>
-<p><img src="images/mcchoi_lab.jpeg" /></p>
+<p><img src="images/mcchoi_lab.jpeg" style="width:75%"></p>
 </div>
 
 
