Editing my website

--- a/about.html
+++ b/about.html
@@ -333,7 +333,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="http://github.com/shinamin0218/">
+  <a href="http://github.com/&lt;shinamin0218&gt;/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -365,7 +365,7 @@ as a research assistant. This experience has fueled my desire to pursue
 a Master’s degree in Epidemiology, with a particular focus on the study
 of aging and chronic diseases.</p></li>
 </ul>
-<p><img src="images/mcchoi_lab.jpeg" style="width:75%"></p>
+<p><img src="images/mcchoi_lab.jpeg" style="width:70%"></p>
 </div>
 
 
