--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="http://github.com/shinamin0218/">
+  <a href="http://github.com/&lt;shinamin0218&gt;/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -366,12 +366,13 @@ div.tocify {
 
 <div id="this-is-shinas-awesome-website" class="section level1">
 <h1>This is Shina’s awesome website</h1>
+<p>Fall is here!! <img src="images/pugs.jpeg" /></p>
 <div id="heres-a-subsection" class="section level2">
 <h2>Here’s a subsection</h2>
 <p>And here’s some additional text …</p>
 <pre class="r"><code>rnorm(10)</code></pre>
-<pre><code>##  [1] -2.2075591  1.5954822  0.4360714  1.9119508 -1.1520705  0.6854142
-##  [7]  0.0221988 -1.0109361  0.5400070  1.0789413</code></pre>
+<pre><code>##  [1]  1.7559143  1.8554243  0.7013224 -0.9451482  1.6422529  0.3251954
+##  [7]  0.5015440  0.2639741  1.5021559 -1.9367257</code></pre>
 </div>
 <div id="links-to-other-websites" class="section level2">
 <h2>Links to other websites</h2>
@@ -380,10 +381,6 @@ div.tocify {
 <li><a href="http://www.google.com">Google</a></li>
 <li><a href="http://p8105.com">P8105</a></li>
 </ul>
-</div>
-<div id="local-image" class="section level2">
-<h2>Local image</h2>
-<p>Fall pugs <img src="images/pugs.jpeg" /></p>
 </div>
 <div id="link-to-page-within-the-site" class="section level2">
 <h2>Link to page within the site</h2>
