Changing the heading

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Making websites</title>
+<title>Welcome to Shina’s website</title>
 
 <script src="site_libs/header-attrs-2.24/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -359,21 +359,14 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Making websites</h1>
+<h1 class="title toc-ignore">Welcome to Shina’s website</h1>
 
 </div>
 
 
-<div id="this-is-shinas-awesome-website" class="section level1">
-<h1>This is Shina’s awesome website</h1>
+<div id="this-is-my-awesome-website" class="section level1">
+<h1>This is my awesome website</h1>
 <p>Fall is here!! <img src="images/pugs.jpeg" /></p>
-<div id="heres-a-subsection" class="section level2">
-<h2>Here’s a subsection</h2>
-<p>And here’s some additional text …</p>
-<pre class="r"><code>rnorm(10)</code></pre>
-<pre><code>##  [1]  1.7559143  1.8554243  0.7013224 -0.9451482  1.6422529  0.3251954
-##  [7]  0.5015440  0.2639741  1.5021559 -1.9367257</code></pre>
-</div>
 <div id="links-to-other-websites" class="section level2">
 <h2>Links to other websites</h2>
 <p>Let’s link to useful tools for data science:</p>
