Adding my resume

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="http://github.com/&lt;shinamin0218&gt;/">
+  <a href="http://github.com/shinamin0218/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
