--- a/about.html
+++ b/about.html
@@ -333,7 +333,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="http://github.com/&lt;shinamin0218&gt;/">
+  <a href="http://github.com/shinamin0218/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -352,8 +352,6 @@ div.tocify {
 </div>
 
 
-<div id="this-page-has-information-about-me" class="section level1">
-<h1>This page has information about me</h1>
 <ul>
 <li><p>I am currently pursuing a Master’s degree in Epidemiology at
 Columbia University with a strong interest in the fields of aging and
@@ -366,6 +364,107 @@ a Master’s degree in Epidemiology, with a particular focus on the study
 of aging and chronic diseases.</p></li>
 </ul>
 <p><img src="images/mcchoi_lab.jpeg" style="width:70%"></p>
+<div id="education" class="section level1">
+<h1>EDUCATION</h1>
+<hr />
+<strong>University of Maryland, College Park, MD</strong>
+<li>
+Bachelor of Science, Public Health: Family Science
+</li>
+<li>
+Graduation Date: July 2019
+</li>
+<strong>Columbia University Mailman School of Public Health, New York,
+NY</strong>
+<li>
+Master of Science, Epidemiology
+</li>
+<li>
+Expected Graduation Date: May 2025
+</li>
+<hr />
+<div id="work-experience" class="section level2">
+<h2>WORK EXPERIENCE</h2>
+<p><strong>Research assistant – Korean Advanced Institute of Science and
+Technology</strong> 291 Daehak-ro, Yuseong-gu, Daejeon, 34141, Korea :
+August 2020 to July 2023</p>
+<ul>
+<li>Provide technical support on the characterization and production of
+preclinical recombinant proteins</li>
+<li>Implement the purification of Tau recombinant proteins and perform
+quality assessments</li>
+<li>Responsible for the design, execution, and documentation of the
+protein purification activities, including new method development and
+optimization</li>
+<li>Provide ready access to all experimental data for the faculty
+researcher and supervisor</li>
+</ul>
+<p><strong>Internship – Greenbelt Cares</strong> January 2019 to May
+2019 25 Crescent Road Greenbelt, MD 20770</p>
+<ul>
+<li>Collaborated with individuals of multicultural and socio-economic
+diversity students to complete homework assignments, identify lagging
+skills, and correct weaknesses</li>
+<li>Taught students high school curricula in preparation for taking the
+GED test</li>
+<li>Reviewed math, English skills, critical thinking, and analytical
+skills in social studies based on students’ needs and assessment</li>
+<li>Used personalized learning plans to guide students to a deeper
+understanding of course material and learning styles</li>
+</ul>
+<hr />
+<strong>POSTER PRESENTATION</strong>
+<li>
+Hasaeam Cho, Hanjoon Nho, Juncheol Lee, Sang Yeop Lee, Shina Min, Kyeong
+Sik Jin, Herbert P. Miller, Leslie Wilson, Stuart C. Feinstein, Cyrus R.
+Safinya, and Myung Chul Choi, Human Tau-Microtubule Phase Transition
+under Ionic Regulation, Poster presented at International Conference on
+Molecular Neurodegeneration; September 2022; Seoul
+</li>
+<hr />
+</div>
+<div id="leadership-experience-community-involvement"
+class="section level2">
+<h2>LEADERSHIP EXPERIENCE &amp; COMMUNITY INVOLVEMENT</h2>
+<dl>
+<dt><strong>Fundraising Chair, Miles for Smiles, University of
+Maryland</strong></dt>
+<dd>
+September 2015 to May 2017
+</dd>
+</dl>
+<ul>
+<li>Developed fundraising events, arranged sponsorships, and
+communicated with local dentists for potential donations.</li>
+<li>Responsible for organizing fundraising projects and focusing on
+raising funds needed to meet the budget Event Coordinator June 2015 to
+September 2016 Korean Engineering and Science Student Association,
+University of Maryland</li>
+<li>Created and maintained event expenditures, budgets, and timelines by
+utilizing internal databases</li>
+<li>Managed administrative logistics of events planning, event booking,
+and event promotions</li>
+</ul>
+<p><strong>Terps for Change</strong> Spring semester 2016</p>
+<ul>
+<li>Volunteered for after-school tutoring at Northwestern high school
+students</li>
+<li>Visited a local site to perform hands-on community service once a
+week</li>
+<li>Participated in weekly facilitated dialogues due to engage more
+deeply with and better understand systemic inequities</li>
+</ul>
+<hr />
+</div>
+<div id="skills" class="section level2">
+<h2>SKILLS</h2>
+<ul>
+<li>Bilingual: Fluent in Korean and English</li>
+<li>CPR certified: as of April 2019</li>
+<li>Computer Proficiencies: Microsoft office, Adobe Photoshop, Python,
+R</li>
+</ul>
+</div>
 </div>
 
 
