Editing my resume

--- a/about.html
+++ b/about.html
@@ -423,9 +423,8 @@ Molecular Neurodegeneration; September 2022; Seoul
 </li>
 <hr />
 </div>
-<div id="leadership-experience-community-involvement"
-class="section level2">
-<h2>LEADERSHIP EXPERIENCE &amp; COMMUNITY INVOLVEMENT</h2>
+<div id="leadership-experience" class="section level2">
+<h2>LEADERSHIP EXPERIENCE</h2>
 <dl>
 <dt><strong>Fundraising Chair, Miles for Smiles, University of
 Maryland</strong></dt>
@@ -445,7 +444,25 @@ utilizing internal databases</li>
 <li>Managed administrative logistics of events planning, event booking,
 and event promotions</li>
 </ul>
-<p><strong>Terps for Change</strong> Spring semester 2016</p>
+<dl>
+<dt><strong>Event Coordinator, Korean Engineering and Science Student
+Association, University of Maryland</strong></dt>
+<dd>
+June 2015 to September 2016
+</dd>
+</dl>
+<ul>
+<li>Created and maintained event expenditures, budgets, and timelines by
+utilizing internal databases</li>
+<li>Managed administrative logistics of events planning, event booking,
+and event promotions</li>
+</ul>
+<dl>
+<dt><strong>Terps for Change</strong></dt>
+<dd>
+Spring semester 2016
+</dd>
+</dl>
 <ul>
 <li>Volunteered for after-school tutoring at Northwestern high school
 students</li>
