Continue editing my resume

--- a/about.html
+++ b/about.html
@@ -367,21 +367,18 @@ of aging and chronic diseases.</p></li>
 <div id="education" class="section level1">
 <h1>EDUCATION</h1>
 <hr />
-<strong>University of Maryland, College Park, MD</strong>
-<li>
-Bachelor of Science, Public Health: Family Science
-</li>
-<li>
-Graduation Date: July 2019
-</li>
-<strong>Columbia University Mailman School of Public Health, New York,
-NY</strong>
-<li>
-Master of Science, Epidemiology
-</li>
-<li>
-Expected Graduation Date: May 2025
-</li>
+<p><strong>University of Maryland, College Park, MD</strong></p>
+<ul>
+<li>Bachelor of Science, Public Health: Family Science</li>
+<li>Graduation Date: July 2019
+</li></li>
+</ul>
+<p><strong>Columbia University Mailman School of Public Health, New
+York, NY</strong></p>
+<ul>
+<li>Master of Science, Epidemiology</li>
+<li>Expected Graduation Date: May 2025</li>
+</ul>
 <hr />
 <div id="work-experience" class="section level2">
 <h2>WORK EXPERIENCE</h2>
@@ -413,14 +410,14 @@ skills in social studies based on students’ needs and assessment</li>
 understanding of course material and learning styles</li>
 </ul>
 <hr />
-<strong>POSTER PRESENTATION</strong>
-<li>
-Hasaeam Cho, Hanjoon Nho, Juncheol Lee, Sang Yeop Lee, Shina Min, Kyeong
-Sik Jin, Herbert P. Miller, Leslie Wilson, Stuart C. Feinstein, Cyrus R.
-Safinya, and Myung Chul Choi, Human Tau-Microtubule Phase Transition
-under Ionic Regulation, Poster presented at International Conference on
-Molecular Neurodegeneration; September 2022; Seoul
-</li>
+<p><strong>POSTER PRESENTATION</strong></p>
+<ul>
+<li>Hasaeam Cho, Hanjoon Nho, Juncheol Lee, Sang Yeop Lee, Shina Min,
+Kyeong Sik Jin, Herbert P. Miller, Leslie Wilson, Stuart C. Feinstein,
+Cyrus R. Safinya, and Myung Chul Choi, Human Tau-Microtubule Phase
+Transition under Ionic Regulation, Poster presented at International
+Conference on Molecular Neurodegeneration; September 2022; Seoul</li>
+</ul>
 <hr />
 </div>
 <div id="leadership-experience" class="section level2">
