--- a/about.html
+++ b/about.html
@@ -363,9 +363,9 @@ as a research assistant. This experience has fueled my desire to pursue
 a Master’s degree in Epidemiology, with a particular focus on the study
 of aging and chronic diseases.</p></li>
 </ul>
-<p><img src="images/mcchoi_lab.jpeg"> <img
+<p><img src="images/mcchoi_lab.jpeg" style="width:75%"> <img
 src="images/mcchoi_lab2.jpg" /></p>
-<p><img src="images/me_in_lab.jpeg"></p>
+<p><img src="images/me_in_lab.jpeg" style="width:75%"></p>
 <div id="education" class="section level1">
 <h1>EDUCATION</h1>
 <hr />
