Editing the columns

--- a/about.html
+++ b/about.html
@@ -384,9 +384,16 @@ York, NY</strong></p>
 <hr />
 <div id="work-experience" class="section level2">
 <h2>WORK EXPERIENCE</h2>
-<p><strong>Research assistant – Korean Advanced Institute of Science and
-Technology</strong> 291 Daehak-ro, Yuseong-gu, Daejeon, 34141, Korea :
-August 2020 to July 2023</p>
+<dl>
+<dt><strong>Research assistant – Korean Advanced Institute of Science
+and Technology</strong></dt>
+<dd>
+291 Daehak-ro, Yuseong-gu, Daejeon, 34141, Korea
+</dd>
+<dd>
+August 2020 to July 2023
+</dd>
+</dl>
 <ul>
 <li>Provide technical support on the characterization and production of
 preclinical recombinant proteins</li>
@@ -398,8 +405,15 @@ optimization</li>
 <li>Provide ready access to all experimental data for the faculty
 researcher and supervisor</li>
 </ul>
-<p><strong>Internship – Greenbelt Cares</strong> January 2019 to May
-2019 25 Crescent Road Greenbelt, MD 20770</p>
+<dl>
+<dt><strong>Internship – Greenbelt Cares</strong></dt>
+<dd>
+25 Crescent Road Greenbelt, MD 20770
+</dd>
+<dd>
+January 2019 to May 2019
+</dd>
+</dl>
 <ul>
 <li>Collaborated with individuals of multicultural and socio-economic
 diversity students to complete homework assignments, identify lagging
