--- a/index.html
+++ b/index.html
@@ -377,7 +377,9 @@ div.tocify {
 </div>
 <div id="link-to-page-within-the-site" class="section level2">
 <h2>Link to page within the site</h2>
-<p><a href="about.html">About me</a></p>
+<ul>
+<li><a href="about.html">About me</a></li>
+</ul>
 </div>
 </div>
 
