Adding my linkedin page

--- a/about.html
+++ b/about.html
@@ -353,6 +353,8 @@ div.tocify {
 
 
 <ul>
+<li><p><a
+href="https://www.linkedin.com/in/shina-min-3b7b58113/">Linkedin</a></p></li>
 <li><p>I am currently pursuing a Master’s degree in Epidemiology at
 Columbia University with a strong interest in the fields of aging and
 Alzheimer’s disease</p></li>
