--- a/index.html
+++ b/index.html
@@ -331,6 +331,9 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
+  <a href="plotly.html">Plotly examples</a>
+</li>
+<li>
   <a href="mailto:&lt;sm5567@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
