--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="plotly.html">Plotly examples</a>
+  <a href="plotly.html">Dashboard</a>
 </li>
 <li>
   <a href="mailto:&lt;sm5567@cumc.columbia.edu&gt;">
