Making little changes

--- a/index.html
+++ b/index.html
@@ -367,9 +367,8 @@ div.tocify {
 </div>
 
 
-<div id="this-is-my-awesome-website" class="section level1">
-<h1>This is my awesome website</h1>
-<p>Fall is here!! <img src="images/pugs.jpeg" /></p>
+<p><strong>Fall is here!!</strong></p>
+<p><img src="images/pugs.jpeg" /></p>
 <div id="links-to-other-websites" class="section level2">
 <h2>Links to other websites</h2>
 <p>Let’s link to useful tools for data science:</p>
@@ -383,7 +382,6 @@ div.tocify {
 <ul>
 <li><a href="about.html">About me</a></li>
 </ul>
-</div>
 </div>
 
 
