--- a/index.html
+++ b/index.html
@@ -369,6 +369,13 @@ div.tocify {
 
 <p><strong>Fall is here!!</strong></p>
 <p><img src="images/pugs.jpeg" /></p>
+<p><img src="images/profile_pic.jpeg" style="width:75%"></p>
+<ul>
+<li>Hello fellow Public Health students~ my name is Shina Min and I am
+currently pursuing a Master’s degree in Epidemiology at Columbia
+University with a strong interest in the fields of aging and Alzheimer’s
+disease</li>
+</ul>
 <div id="links-to-other-websites" class="section level2">
 <h2>Links to other websites</h2>
 <p>Let’s link to useful tools for data science:</p>
@@ -381,6 +388,8 @@ div.tocify {
 <h2>Link to page within the site</h2>
 <ul>
 <li><a href="about.html">About me</a></li>
+<li><a
+href="https://www.linkedin.com/in/shina-min-3b7b58113/">Linkedin</a></li>
 </ul>
 </div>
 
