--- a/about.html
+++ b/about.html
@@ -356,17 +356,12 @@ div.tocify {
 
 
 <ul>
-<li><p><a
-href="https://www.linkedin.com/in/shina-min-3b7b58113/">Linkedin</a></p></li>
-<li><p>I am currently pursuing a Master’s degree in Epidemiology at
-Columbia University with a strong interest in the fields of aging and
-Alzheimer’s disease</p></li>
-<li><p>I spent three years in a biology physics laboratory, working on
-the Tau protein, which is a known causative factor in Alzheimer’s
-disease. My professor and colleagues greatly inspired me during my time
-as a research assistant. This experience has fueled my desire to pursue
-a Master’s degree in Epidemiology, with a particular focus on the study
-of aging and chronic diseases.</p></li>
+<li>I spent three years in a biology physics laboratory, working on the
+Tau protein, which is a known causative factor in Alzheimer’s disease.
+My professor and colleagues greatly inspired me during my time as a
+research assistant. This experience has fueled my desire to pursue a
+Master’s degree in Epidemiology, with a particular focus on the study of
+aging and chronic diseases.</li>
 </ul>
 <p><img src="images/mcchoi_lab.jpeg" style="width:75%"> <img
 src="images/mcchoi_lab2.jpg" /></p>
